2014-02-17  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Register gensym function as the gensym
	intrinsic, rather than gensymv.
	Register gensym_counter as *gensym-counter*.

	* lib.c (gensym): Handle missing prefix argument by defaulting
	the prefix to "g".
	(gensymv): Function removed.

	* lib.h (gensymv): Declaration removed.

	* txr.1: Fixed omission: missing documentation for gensym.
	Documented *gensym-counter*.

2014-02-17  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (expand): Bugfix: do not expand any part of the macro
	form via expand_forms. This is completely wrong since only the
	macro knows what material is evaluated and what isn't.

2014-02-16  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (op_tree_case): Removed superfluous handling of
	nil parameter list; this is correctly handled by bind_macro_params.
	Added support for the colon symbol as an indication that
	the case is declined.

	* txr.1: Updated.

2014-02-16  Kaz Kylheku  <kaz@kylheku.com>

	New destructuring operators.

	* eval.c (tree_case_s, tree_bind_s): New symbol variables.
	(bind_macro_params): Bugfix: inappropriate exception thrown when atom
	matched against parameter list. Bugfix: nil being returned when
	atom matches empty parameter list. Added support for a new convention:
	if loose_p is the colon keyword, then exceptions are not thrown
	for destructuring mismatches; nil is returned instad.
	(op_tree_case, expand_tree_cases, expand_tree_case, op_tree_bind):
	New static functions.
	(expand): Handle tree_case_s and tree_bind_s.
	(eval_init): Intern tree-case and tree-bind symbols.
	Register the corresponding operator functions op_tree_case and
	op_tree_bind under these symbols in op_table.

	* txr.1: Documented tree-case and tree-bind operators.

2014-02-16  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (bind_macro_params): Bugfix: enforce mismatch on
	superfluous material.

2014-02-16  Kaz Kylheku  <kaz@kylheku.com>

	In the spirit of the previous hack, here is another hack to